@@ -18,7 +18,7 @@
 -->
 		<submenu name="mainMenu" displaytext="{tr(mainMenu)}">
 			<parameter type="bool" name="showOnlyTimers" displaytext="{tr(showOnlyTimers)}">0</parameter>
-			<parameter type="bool" name="showTimersandInfos" displaytext="{tr(showTimersandInfos)}">0</parameter>
+			<parameter type="bool" name="showTimersRecordingsandInfos" displaytext="{tr(showTimersRecordingsandInfos)}">0</parameter>
 		</submenu>
 		<submenu name="menuItems" displaytext="{tr(menuItems)}">
 			<parameter type="int" name="numShortMenuitems" min="8" max="10" displaytext="{tr(numShortMenuitems)}">10</parameter>
@@ -26,7 +26,7 @@
 			<parameter type="int" name="numShortSubmenuitems" min="12" max="18" displaytext="{tr(numShortSubmenuitems)}">15</parameter>
 		</submenu>
 		<submenu name="miscellaneous" displaytext="{tr(miscellaneous)}">
-			<parameter type="bool" name="brightBackground" displaytext="{tr(brightBackground)}">0</parameter>
+			<parameter type="bool" name="brightBackground" displaytext="{tr(brightBackground)}">1</parameter>
 			<parameter type="int" name="coloredButtons" min="0" max="2" displaytext="{tr(coloredButtons)}">0</parameter>
 			<parameter type="bool" name="setupIconbar" displaytext="{tr(setupIconbar)}">0</parameter>
 			<parameter type="int" name="menuFadetime" min="0" max="500" displaytext="{tr(menuFadetime)}">0</parameter>
@@ -85,9 +85,9 @@
 			<trans lang="en_EN">Show only timers in mainmenu</trans>
 			<trans lang="de_DE">Zeige nur Timer im Hauptmenü</trans>
 		</token>
-		<token name="tr(showTimersandInfos)">
-			<trans lang="en_EN">Show timers and infos in mainmenu</trans>
-			<trans lang="de_DE">Zeige Timer und Infos im Hauptmenü</trans>
+		<token name="tr(showTimersRecordingsandInfos)">
+			<trans lang="en_EN">Show timers, last recordings and infos in mainmenu</trans>
+			<trans lang="de_DE">Zeige Timer, letzte Aufnahmen und Infos im Hauptmenü</trans>
 		</token>
 		<token name="tr(menuFadetime)">
 			<trans lang="en_EN">Fadetime of menus in ms</trans>
