@@ -69,7 +69,7 @@
 		</area>
 	</colorbuttons>
 
-	<timers condition="{showOnlyTimers}||{showTimersandInfos}" detached="true" delay="100" fadetime="500" >
+	<timers condition="{showOnlyTimers}||{showTimersRecordingsandInfos}" detached="true" delay="100" fadetime="500" >
 		<area  condition="not{numtimerconflicts}" x="61%" y="73%" width="12%" height="6%" layer="3">
 			<drawtext condition="gt({numtimers}, 1)" x="5%" y="15%" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="{numtimers} {tr(activetimers)}" />
 			<drawtext condition="eq({numtimers}, 1)" x="5%" y="15%" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="{numtimers} {tr(activetimer)}" /> 
@@ -78,12 +78,12 @@
 			<drawtext condition="eq({numtimerconflicts}, 1)" x="5%" y="0" valign="center" font="{light}" fontsize="60%" color="{clrRed}" text="{numtimerconflicts} {tr(conflict)}!" />           
 			<drawtext condition="gt({numtimerconflicts}, 1)" x="5%" y="0" valign="center" font="{light}" fontsize="60%" color="{clrRed}" text="{numtimerconflicts} {tr(conflicts)}!" />
 		</area>
-		<area  condition="{showOnlyTimers}++not{showTimersandInfos}" x="1%" y="80%" width="85%" height="18%" layer="3">
+		<area  condition="{showOnlyTimers}++not{showTimersRecordingsandInfos}" x="1%" y="80%" width="85%" height="18%" layer="3">
 			<loop name="timers" x="0" y="0" orientation="horizontal" columnwidth="{areawidth}/8" rowheight="{areaheight}" overflow="cut">
 				<drawimage x="0" y="0" width="{columnwidth}" height="{rowheight}" imagetype="skinpart" path="shadowsTimerMain" />
 			</loop>
 		</area>             
-		<area condition="{showOnlyTimers}++not{showTimersandInfos}" x="1%" y="80%" width="95%" height="18%" layer="3">
+		<area condition="{showOnlyTimers}++not{showTimersRecordingsandInfos}" x="1%" y="80%" width="95%" height="18%" layer="3">
 			<loop name="timers" x="0" y="0" orientation="horizontal" columnwidth="{areawidth}/9*1.005" rowheight="{areaheight}" overflow="cut">
 				<drawimage  cache="true" name="logo" y="{areaheight}*0.11" width="5%" height="15%" align="center" imagetype="channellogo" path="{timers[channelid]}" />
 				<drawtextbox x="1%" y="40%" width="{columnwidth}*0.8" align="center" maxlines="2" font="{light}" fontsize="15%" color="{clrLightGray}" text="{timers[title]}" />
@@ -91,16 +91,16 @@
 				<drawtext condition="{timers[recording]}" align="center" y="78%" font="{light}" fontsize="15%" color="{clrRed}" text="{timers[datetime]}"/>
 			</loop>
 		</area>
-		<area condition="{showOnlyTimers}++gt({numtimers}, 8)++not{showTimersandInfos}" x="86%" y="80%" width="12%" height="18%" layer="3">
+		<area condition="{showOnlyTimers}++gt({numtimers}, 8)++not{showTimersRecordingsandInfos}" x="86%" y="80%" width="12%" height="18%" layer="3">
 			<drawimage x="0" y="0" width="{areawidth}*0.96" height="{areaheight}" imagetype="skinpart" path="shadowsTimerMainLast" />
 		</area>
-		<area  condition="{showTimersandInfos}++not{showOnlyTimers}" x="1%" y="80%" width="78%" height="18%" layer="3">
-			<loop name="timers" x="0" y="0" orientation="horizontal" columnwidth="{areawidth}/7" rowheight="{areaheight}" overflow="cut">
+		<area  condition="{showTimersRecordingsandInfos}++not{showOnlyTimers}" x="1%" y="80%" width="44%" height="18%" layer="3">
+			<loop name="timers" x="0" y="0" orientation="horizontal" columnwidth="{areawidth}/4" rowheight="{areaheight}" overflow="cut">
 				<drawimage x="0" y="0" width="{columnwidth}" height="{rowheight}" imagetype="skinpart" path="shadowsTimerMain" />
 			</loop>
 		</area>
-		<area condition="{showTimersandInfos}++not{showOnlyTimers}" x="1%" y="80%" width="78%" height="18%" layer="3">
-			<loop name="timers" x="0" y="0" orientation="horizontal" columnwidth="{areawidth}/7*1.005" rowheight="{areaheight}" overflow="cut">
+		<area condition="{showTimersRecordingsandInfos}++not{showOnlyTimers}" x="1%" y="80%" width="44%" height="18%" layer="3">
+			<loop name="timers" x="0" y="0" orientation="horizontal" columnwidth="{areawidth}/4*1.005" rowheight="{areaheight}" overflow="cut">
 				<drawimage  cache="true" name="logo" y="{areaheight}*0.11" width="5%" height="15%" align="center" imagetype="channellogo" path="{timers[channelid]}" />
 				<drawtextbox x="1%" y="40%" width="{columnwidth}*0.8" align="center" maxlines="2" font="{light}" fontsize="15%" color="{clrLightGray}" text="{timers[title]}" />
 				<drawtext condition="not{timers[recording]}" align="center" y="78%" font="{light}" fontsize="15%" color="{clrLightGray}" text="{timers[datetime]}"/>
@@ -108,6 +108,16 @@
 			</loop>
 		</area>    
 	</timers>
+	<!--<lastrecordings condition="lt({numtimers}, 4)++{showTimersRecordingsandInfos}" detached="true" delay="100" fadetime="500">-->
+	<lastrecordings condition="{showTimersRecordingsandInfos}" detached="true" delay="100" fadetime="500">
+		<area x="45%" y="80%" width="33%" height="18%" layer="3">
+			<loop name="recordings" x="0" y="0" orientation="horizontal" columnwidth="{areawidth}/3" rowheight="{areaheight}" overflow="cut">
+				<drawimage x="0" y="0" width="{columnwidth}" height="{rowheight}" imagetype="skinpart" path="shadowsRecordingsMain" />
+				<drawtext align="center" y="10%" font="{light}" fontsize="15%" color="{clrLightGray}" text="{recordings[date]} {recordings[time]}" />
+				<drawtextbox x="2%" y="40%" width="{columnwidth}*0.8" align="center" maxlines="3" font="{light}" fontsize="15%" color="{clrLightGray}" text="{recordings[name]}" /> 
+			</loop>
+		</area>
+	</lastrecordings>
 
 	<discusage detached="true" delay="150" fadetime="500">
 		<area x="75%" y="73%" width="18%" height="6%" layer="3">
@@ -118,7 +128,7 @@
 	<devices> 
 	</devices>
 
-	<currentweather condition="{showTimersandInfos}++not{showOnlyTimers}" detached="true" delay="200" fadetime="500" >
+	<currentweather condition="{showTimersRecordingsandInfos}++not{showOnlyTimers}" detached="true" delay="200" fadetime="500" >
 		<area x="81%" y="92%" width="7%" height="6%" layer="3">
 			<drawimage name="weathericon" x="0" valign="center" width="{areaheight}*0.8" height="{areaheight}*0.8" imagetype="icon" path="{icon}" />
 			<drawtext name="temperature" x="0" align="right" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="{temperature}°C" />
@@ -129,7 +139,7 @@
 		</area>
 	</currentweather>
 
-	<systemload condition="{showTimersandInfos}++not{showOnlyTimers}" detached="true" delay="200" fadetime="500" >
+	<systemload condition="{showTimersRecordingsandInfos}++not{showOnlyTimers}" detached="true" delay="200" fadetime="500" >
 		<area x="79%" y="80%" width="21%" height="20%" layer="3">
 			<drawimage x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="shadowsInfoMainLast" />
 		</area>
@@ -138,7 +148,7 @@
 		</area>
 	</systemload>
 	
-	<temperatures condition="{showTimersandInfos}++not{showOnlyTimers}" detached="true" delay="200" fadetime="500" >   
+	<temperatures condition="{showTimersRecordingsandInfos}++not{showOnlyTimers}" detached="true" delay="200" fadetime="500" >   
 		<area  x="81%" y="80%" width="14%" height="6%" layer="3">		
 			<drawtext x="0" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="CPU: {cputemp}°C   GPU: {gputemp}°C"/>
 		</area>
